feature/user_domain - refactor : 리팩토링 [2] #18